--- a/scss/style.scss
+++ b/scss/style.scss
@@ -260,10 +260,22 @@ input:focus:-ms-input-placeholder {
   padding: 120px 0;
   .ba-one {
     margin-left: 100px;
+    &:hover{
+      margin-left: 235px;
+      border: 10px solid fuchsia;
+      transition: 1s;
+      cursor: pointer;
+    }
   }
   .ba-two {
     margin-left: 235px;
     padding: 0;
+    &:hover{
+    margin-left: 100px;
+    cursor: pointer;
+    transition: 1s;
+    border: 10px solid fuchsia;
+    }
   }
 }
 .ba-four {
